--- a/Learning/exceptions/exceptions.ipynb
+++ b/Learning/exceptions/exceptions.ipynb
@@ -44,14 +44,14 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "### Try while True, break."
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
@@ -130,11 +130,74 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Try finally\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Ha ocurrido un error, por favor introduce un numero valido\nFin de la iteracion.\n",
+      "Ha ocurrido un error, por favor introduce un numero valido\nFin de la iteracion.\n",
+      "Ha ocurrido un error, por favor introduce un numero valido\nFin de la iteracion.\n",
+      "10.0/4=2.5\nTodo ha funcionado correctamente.\nFin de la iteracion.\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        n = float(input('Introduce un numero: '))\n",
+    "        m = 4\n",
+    "        print('{}/{}={}'.format(n, m, n / m))\n",
+    "    except ValueError:\n",
+    "        print('Ha ocurrido un error, por favor introduce un numero valido')\n",
+    "    else:\n",
+    "        print('Todo ha funcionado correctamente.')\n",
+    "        break # Importante romper la ejecucion despues de que sea un resultado valido.\n",
+    "    finally:\n",
+    "        print('Fin de la iteracion.')\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Multiples excepciones"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n"
+    "try:\n",
+    "    n = input('ingrese un numero')\n",
+    "    5/n\n",
+    "except Exception as e:\n",
+    "    print(type(e).__name__)\n"
    ],
    "metadata": {
     "collapsed": false,
