vamo a ver si terminamos esto

--- a/Learning/exceptions/exceptions.ipynb
+++ b/Learning/exceptions/exceptions.ipynb
@@ -190,8 +190,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Error\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    n = input('ingrese un numero')\n",
+    "    5/n\n",
+    "except:\n",
+    "    print(\"Error\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "TypeError\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "try:\n",
     "    n = input('ingrese un numero')\n",
@@ -202,7 +237,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
     }
    }
   }
