--- a/Learning/exceptions/exceptions.ipynb
+++ b/Learning/exceptions/exceptions.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "text": [
-      "Ha ocurrido un error, por favor introduce un numero valido\n"
+      "12.0/4=3.0\n"
      ],
      "output_type": "stream"
     }
@@ -232,6 +232,31 @@
     "    n = input('ingrese un numero')\n",
     "    5/n\n",
     "except Exception as e:\n",
+    "    print(type(e).__name__)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    n = float(input('ingrese un numero'))\n",
+    "    5/n\n",
+    "except TypeError:\n",
+    "    print('Cannot divide number by an string')\n",
+    "except ValueError:\n",
+    "    print('Debes introducir un numero.')\n",
+    "except ZeroDivisionError:\n",
+    "    print('No puedes dividir por 0')\n",
+    "except Exception as e:\n",
     "    print(type(e).__name__)\n"
    ],
    "metadata": {
@@ -239,6 +264,88 @@
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Invocando excepciones.\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Error! no se permite un valor nulo.\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "def mi_funcion(algo=None):\n",
+    "    if algo is None:\n",
+    "        print('Error! no se permite un valor nulo.')\n",
+    "        \n",
+    "mi_funcion('algo')\n",
+    "mi_funcion()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Error! no se permite un valor nulo(Desde la excepcion)\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "def mi_funcion(algo=None):\n",
+    "    try:\n",
+    "        if algo is None:\n",
+    "            raise ValueError('Error! no se permite un valor nulo.')\n",
+    "    except ValueError:\n",
+    "        print('Error! no se permite un valor nulo(Desde la excepcion)')\n",
+    "\n",
+    "mi_funcion()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
